ags (2.0.13)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* implemented AgsWaveLoader
	* implemented AgsAudiorec file loading animation
	* fixed set property of AgsLv2Worker:returnable-thread

ags (2.0.12)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* enabled recursive property reset during ags_channel_set_link() and fixed apply on output

ags (2.0.11)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* added missing AGS_SOUND_ABILITY_PLAYBACK of plugin bridge's AgsAudio
	* partial rewrite of ags_envelope_audio_signal_run_inter()
	* fixed to many calls to the dispatcher
	* disable recursive property reset during ags_channel_set_link()

ags (2.0.10)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed AgsMidiDialog non existing property use correct one "input-sequencer"
	* fixed free of unitialized GList in ags_effect_bridge.c
	* fixed DSSI and LV2 machines to use correct recall context
	* fixed dead-lock in ags_lv2_urid_manager.c
	* implemented missing properties AgsPlayDssi:bank and AgsPlayDssi:program
	* added missing AGS_SOUND_ABILITY_PLAYBACK of instrument's AgsAudio

ags (2.0.9)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* reverted previously introduced but in ags-capture-wave
	* fixed ags-play-wave wrong offset calculation
	* fixed output/input soundcard editor to reset audio channel to -1 if no soundcard
	* fixed automation editor SIGSEGV due to NULL pointer dereference
	* fixed missing port in automation editor
	* fixed all sorts of automation related issues

ags (2.0.8)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed missing ability flags in sound generator machines related to channel scope

ags (2.0.7)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed some properties of AgsJackServer and AgsJackClient
	* fixed some properties of AgsPulseServer and AgsJackClient
	* fixed some properties of AgsCoreAudioServer