@@ -1,3 +1,8 @@
+ags (2.0.14)
+
+	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
+	* fixed ags-capture-wave and ags-play-wave recall to use correct offset
+
 ags (2.0.13)
 
 	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
